--- a/src/client/app/login/login.component.html
+++ b/src/client/app/login/login.component.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-lg-4 col-lg-offset-4">
         	<img src="assets/images/cangs.png" class="user-avatar" />
-			<h1>Cang's Inc.<br><small>Admin Page</small></h1>
+			<!--<h1>Cang's Inc.<br><small>Admin Page</small></h1>-->
 			{{error}}
 			<form role="form">
 				<div class="form-content">
