--- a/src/client/app/dashboard/item/item.component.html
+++ b/src/client/app/dashboard/item/item.component.html
@@ -73,27 +73,25 @@
     <table class="table table-scroll">
         <thead>
             <tr>
-                <th>Picture</th>
-                <th>ID</th>
+                <th width="100">ID</th>
+                <th >Picture</th>
                 <th>Name</th>
-                <th>Quantity Stored</th>
-                <th>Price</th>
-               
-                <th>Description</th>
+                <th width="300">Description</th>
+                <th width="100">Qty Stored</th>
                 <th>Category</th>
+                <th>Price</th>                
                 <th *ngIf="editItem || delItem">Options</th>
             </tr>
         </thead>
         <tbody  class="content">
             <tr *ngFor="let item of items.data | itemFilter : filter">
+                <td width="100">{{item.itemID}}</td>
                 <td><img src="{{item.picture}}" width="100" height="100"></td>
-                <td>{{item.itemID}}</td>
                 <td>{{item.itemName}}</td>
-                <td>{{item.itemQuantityStored}}</td>
-                <td>{{item.itemPrice | currency:'PHP':true:'1.2-2'}}</td>
-                
-                <td>{{item.itemDescription}}</td>
+                <td width="300">{{item.itemDescription}}</td>
+                <td width="100">{{item.itemQuantityStored}}</td>
                 <td>{{item.category}}</td>
+                <td class="price">{{item.itemPrice | currency:'PHP':true:'1.2-2'}}</td>
                 <td *ngIf="editItem || delItem">
                     <button *ngIf="editItem" class="btn btn-info" (click)="clickedit($event,item.itemID,item.itemName,item.itemQuantityStored,item.itemPrice,item.purchaseCount,item.picture,item.itemDescription,item.category)" onclick="document.getElementById('edit').style.display='block'">
                         <i class="fa fa-pencil"></i>
@@ -168,7 +166,7 @@
 <!--edit-->
 <!-- The Modal -->
 <div id="edit" class="modal">
-    <span onclick="document.getElementById('edit').style.display='none'" class="close" title="Close Modal">&times;</span>
+    <span (click)="clean()" onclick="document.getElementById('edit').style.display='none'" class="close" title="Close Modal">&times;</span>
 
         <!-- Modal Content -->
         <form role="form" id="dataedit" class="modal-content animate" >
@@ -199,7 +197,7 @@
                     </div>
                     <div align="left">
                         <label><b>Item Category</b></label><br>
-                        <select [ngModelOptions]="{standalone: true}" [(ngModel)]="category">
+                        <select (change)="onChangeCategory()" [ngModelOptions]="{standalone: true}" [(ngModel)]="category">
                             <option value="Dry Goods">Dry Goods</option>
                             <option value="Non-chilled Beverages">Non-chilled Beverages</option>
                             <option value="Condiments">Condiments</option>
@@ -207,15 +205,15 @@
                             <option value="Toiletries">Toiletries</option>  
                              <option value="Miscellaneous">Miscellaneous</option>      
                         </select>
-                    </div>
+                    </div><!--
                     <div align="left" class="form-group">
                             <br>
                             <label><b>PurchaseCount</b></label>
                             <input class="form-control input-underline input-lg" type="text" [value]="purchaseCount"  [(ngModel)]="purchaseCount" name="purchaseCount" readonly>                     
-                    </div>
+                    </div>-->
                     
-                    <div align="center" class="form-group"> 
-                            <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitEdit($event, user.value)'>Save</button>    
+                    <div align="center" class="form-group"> <br>
+                            <button [disabled]="!complexForm.valid || (complexForm.controls['itemPrice'].pristine && complexForm.controls['itemQuantityStored'].pristine && complexForm.controls['itemDescription'].pristine && verify)" class="btn btn-primary" (click) ='onSubmitEdit($event, user.value)'>Save</button>    
                     </div>
                 </div>
             </div>
