--- a/src/client/app/dashboard/itemrestore/itemrestore.component.html
+++ b/src/client/app/dashboard/itemrestore/itemrestore.component.html
@@ -74,28 +74,26 @@
     <table class="table table-scroll">
         <thead>
             <tr>
-                <th>Picture</th>
-                <th>ID</th>
+               <th width="100">ID</th>
+                <th >Picture</th>
                 <th>Name</th>
-                <th>Quantity Stored</th>
-                <th>Price</th>
-                <th>Purchase Count</th>
-                <th>Description</th>
+                <th width="300">Description</th>
+                <th width="100">Qty Stored</th>
                 <th>Category</th>
+                <th>Price</th>                
                 <th *ngIf="editItem || delItem">Options</th>
             </tr>
 
         </thead>
         <tbody>
             <tr *ngFor="let item of items.data | itemFilter : filter">
+                <td width="100">{{item.itemID}}</td>
                 <td><img src="{{item.picture}}" width="100" height="100"></td>
-                <td>{{item.itemID}}</td>
                 <td>{{item.itemName}}</td>
-                <td>{{item.itemQuantityStored}}</td>
-                <td>{{item.itemPrice | currency:'PHP':true:'1.2-2'}}</td>
-                <td>{{item.purchaseCountAllTime}}</td>
-                <td>{{item.itemDescription}}</td>
+                <td width="300">{{item.itemDescription}}</td>
+                <td width="100">{{item.itemQuantityStored}}</td>
                 <td>{{item.category}}</td>
+                <td class="price">{{item.itemPrice | currency:'PHP':true:'1.2-2'}}</td>
                 <td>
                     <button *ngIf="delItem" class="btn btn-primary" (click)="clickedit($event,item.itemID,item.itemName,item.itemQuantityStored,item.itemPrice,item.purchaseCount,item.picture,item.itemDescription,item.category)" onclick="document.getElementById('restore').style.display='block'">
                         Restore
@@ -109,7 +107,7 @@
 <!--edit-->
 <!-- The Modal -->
 <div id="restore" class="modal">
-    <span onclick="document.getElementById('restore').style.display='none'" class="close" title="Close Modal">&times;</span>
+    <span (click)="clear()" onclick="document.getElementById('restore').style.display='none'" class="close" title="Close Modal">&times;</span>
 
         <!-- Modal Content -->
         <form role="form" id="dataedit" class="modal-content animate" >
@@ -139,21 +137,19 @@
                     </div>
                     <div align="left">
                         <label><b>Item Category</b></label><br>
-                        <select [ngModelOptions]="{standalone: true}" [(ngModel)]="category">
-                            <option value="Food">Food</option>
-                            <option value="Drinks">Drinks</option>
+                        <select (change)="onChangeCategory()" [ngModelOptions]="{standalone: true}" [(ngModel)]="category">
+                            <option value="Dry Goods">Dry Goods</option>
+                            <option value="Non-chilled Beverages">Non-chilled Beverages</option>
                             <option value="Condiments">Condiments</option>
-                            <option value="Toiletries">Toiletries</option>        
+                            <option value="Dairy Products">Dairy Products</option>  
+                            <option value="Toiletries">Toiletries</option>  
+                            <option value="Miscellaneous">Miscellaneous</option>      
                         </select>
                     </div>
-                    <div align="left" class="form-group">
-                            <br>
-                            <label><b>PurchaseCount</b></label>
-                            <input class="form-control input-underline input-lg" type="text" [value]="purchaseCount"  [(ngModel)]="purchaseCount" name="purchaseCount" readonly>                     
-                    </div>
-                    
+                 
+                    <br>
                     <div align="center" class="form-group"> 
-                            <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitRestore($event, user.value)'>Restore</button>    
+                            <button [disabled]="!complexForm.valid || (complexForm.controls['itemPrice'].pristine && complexForm.controls['itemQuantityStored'].pristine && complexForm.controls['itemDescription'].pristine && verify) " class="btn btn-primary" (click) ='onSubmitRestore($event, user.value)'>Restore</button>    
                     </div>
                 </div>
             </div>
