--- a/src/client/app/dashboard/itemstatistics/itemstatistics.component.html
+++ b/src/client/app/dashboard/itemstatistics/itemstatistics.component.html
@@ -4,28 +4,27 @@
     <table class="table table-scroll">
         <thead>
             <tr>
+                 <th>ID</th>
                 <th>Picture</th>
-                <th>ID</th>
                 <th>Name</th>
                 <th>Description</th>
-                <th>Price</th>
-                 <th>Category</th>
-                <th>Purchase Count</th>      
+                <th>Purchase Count</th> 
+                <th>Category</th>
+                <th>Price</th>   
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let item of items.data">
                 <!--<td><img [src]="'data:image/PNG;base64,'+ item.picture.split(' ').join('') | safeHtml" width="100" height="100"></td>-->
-                <td><img src="{{item.picture}}" width="100" height="100"></td>
+               
                 <td>{{item.itemID}}</td>
+                 <td><img src="{{item.picture}}" width="100" height="100"></td>
                 <td>{{item.itemName}}</td>
                 <td>{{item.itemDescription}}</td>
-                <td>{{item.itemPrice | currency:'PHP':true:'1.2-2'}}</td>
+                <td>{{item.purchaseCountAllTime}}</td> 
                  <td>{{item.category}}</td>
-                <td>{{item.purchaseCountAllTime}}</td>              
-            </tr>
-            
-        
+                <td class="price">{{item.itemPrice | currency:'PHP':true:'1.2-2'}}</td>                       
+            </tr>   
         </tbody>
     </table>
 </div>
