--- a/src/client/app/dashboard/itemstatisticsmonth/itemstatisticsmonth.component.html
+++ b/src/client/app/dashboard/itemstatisticsmonth/itemstatisticsmonth.component.html
@@ -57,31 +57,32 @@
 }
     </style>
 <button (click)="export()"><i class="fa fa-print"></i>Export</button>
-<button onclick="document.getElementById('reset').style.display='block'"><i class="fa fa-repeat"></i>Reset</button>
+<button [disabled]="disabled" onclick="document.getElementById('reset').style.display='block'"><i class="fa fa-repeat"></i>Reset</button>
 <h1 align="center">Top 20 Most Bought Items(Monthly)</h1>
 <div class="table well">
     <table class="table table-scroll">
         <thead>
             <tr>
+               <th>ID</th>
                 <th>Picture</th>
-                <th>ID</th>
                 <th>Name</th>
-                 <th>Description</th>
-                <th>Price</th>
-                 <th>Category</th>
-                <th>Purchase Count</th>      
+                <th>Description</th>
+                <th>Purchase Count</th> 
+                <th>Category</th>
+                <th>Price</th>    
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let item of items.data">
                 <!--<td><img [src]="'data:image/PNG;base64,'+ item.picture.split(' ').join('') | safeHtml" width="100" height="100"></td>-->
                 <td><img src="{{item.picture}}" width="100" height="100"></td>
-                <td>{{item.itemID}}</td>
+                 <td>{{item.itemID}}</td>
+                 <td><img src="{{item.picture}}" width="100" height="100"></td>
                 <td>{{item.itemName}}</td>
                 <td>{{item.itemDescription}}</td>
-                <td>{{item.itemPrice | currency:'PHP':true:'1.2-2'}}</td>
-                <td>{{item.category}}</td>
-                <td>{{item.purchaseCountMonth}}</td>              
+                <td>{{item.purchaseCountMonth}}</td> 
+                 <td>{{item.category}}</td>
+                <td class="price">{{item.itemPrice | currency:'PHP':true:'1.2-2'}}</td>              
             </tr>
             
         
